[project]
name = "nestedtuple"
authors = [
    {name = "Tolga Ok", email = "T.Ok@tudelft.nl"}
]
version = "0.1.0"
requires-python = ">=3.9"
readme = "README.md"
description = "Create a nested named tuples using the class definitions."
license = {text = "MIT License"}

[tool.autopep8]
max_line_length = 100
