[project]
name = "nestedtuple"
authors = [
    {name = "Tolga Ok", email = "tok@tudelft.nl"}
]
version = "0.1.0"
requires-python = ">=3.11"
readme = "README.md"
description = "Create a nested named tuples using class definitions."
license = {text = "MIT License"}

[tool.autopep8]
max_line_length = 100
